Tentative Fix for #69
Still needs some work as it looks weird after adding the first song to
the queue and before the song has loaded.

--- a/public/style/app.css
+++ b/public/style/app.css
@@ -614,7 +614,7 @@ div.leftSubContainer {
 	overflow-y: scroll;
 	width: 100%;
 	position: absolute;
-	top: 266px;
+	top: 400px;
 	bottom: 0px;
 	margin-bottom: 12px;
 }
